--- a/pom.xml
+++ b/pom.xml
@@ -12,20 +12,14 @@
     </parent>
     <groupId>com.jpworks</groupId>
     <artifactId>employee-info</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.5</version>
     <name>employee-info</name>
-    <description>Employee services with Spring Cloud Function on top of Azure Functions. Spring Boot 2.4.4 with Spring
-        Data JDBC 2
-    </description>
+    <description>Employee services with Spring Cloud Function on top of Azure Functions</description>
     <properties>
         <!-- Project configuration -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <springboot.version>2.4.4</springboot.version>
-
-        <!-- Docker configuration -->
-        <jib-maven-plugin.version>3.0.0</jib-maven-plugin.version>
-        <docker.image.prefix>jpworks.azurecr.io</docker.image.prefix>
 
         <!-- Azure configuration -->
         <azure.functions.java.library.version>1.4.2</azure.functions.java.library.version>
@@ -36,8 +30,20 @@
         <stagingDirectory>${project.build.directory}/azure-functions/${functionAppName}</stagingDirectory>
         <start-class>com.jpworks.datajdbc.employee.EmployeeApplication</start-class>
         <spring.boot.wrapper.version>1.0.26.RELEASE</spring.boot.wrapper.version>
+
+        <!-- Sonar configuration -->
+        <sonar.projectKey>employee-info-sonarkey</sonar.projectKey>
+        <sonar.organization>jpontdia</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.exclusions>**/EmployeeInfoHandler.java</sonar.exclusions>
+
+
+        <!-- Rest Assured Configuration for 4.x library and Spring Boot -->
+        <rest-assured.version>4.3.3</rest-assured.version>
+        <groovy.version>3.0.8</groovy.version>
     </properties>
     <dependencies>
+        <!-- Spring dependencies -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-function-adapter-azure</artifactId>
@@ -57,12 +63,19 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Azure dependencies -->
+        <dependency>
+            <groupId>com.microsoft.azure.functions</groupId>
+            <artifactId>azure-functions-java-library</artifactId>
+            <version>${azure.functions.java.library.version}</version>
+        </dependency>
+
         <!-- Azure SQL DB -->
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
             <version>9.2.1.jre8</version>
-            <!-- <version>9.2.1.jre11</version> -->
+            <!-- For Java 11 the version should be 9.2.1.jre11 -->
         </dependency>
 
         <!-- Test dependencies -->
@@ -78,8 +91,12 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
 
     <dependencyManagement>
         <dependencies>
@@ -90,49 +107,15 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <dependency>
-                <groupId>com.microsoft.azure.functions</groupId>
-                <artifactId>azure-functions-java-library</artifactId>
-                <version>${azure.functions.java.library.version}</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>com.microsoft.azure</groupId>
-                    <artifactId>azure-functions-maven-plugin</artifactId>
-                    <version>${azure.functions.maven.plugin.version}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>3.1.0</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-dependency-plugin</artifactId>
-                    <version>3.1.2</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-clean-plugin</artifactId>
-                    <version>3.1.0</version>
-                </plugin>
-                <plugin>
-                    <groupId>io.gatling</groupId>
-                    <artifactId>gatling-maven-plugin</artifactId>
-                    <version>3.1.1</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-
         <plugins>
             <plugin>
                 <groupId>com.microsoft.azure</groupId>
                 <artifactId>azure-functions-maven-plugin</artifactId>
+                <version>${azure.functions.maven.plugin.version}</version>
                 <configuration>
                     <resourceGroup>${functionResourceGroup}</resourceGroup>
                     <appName>${functionAppName}</appName>
@@ -147,10 +130,6 @@
                             <name>FUNCTIONS_EXTENSION_VERSION</name>
                             <value>~3</value>
                         </property>
-                        <property>
-                            <name>FUNCTIONS_WORKER_RUNTIME</name>
-                            <value>java</value>
-                        </property>
                     </appSettings>
                 </configuration>
                 <executions>
@@ -163,7 +142,9 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <id>copy-resources</id>
@@ -189,9 +170,11 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.1.2</version>
                 <executions>
                     <execution>
                         <id>copy-dependencies</id>
@@ -212,6 +195,7 @@
 
             <!--Remove obj folder generated by .NET SDK in maven clean-->
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
@@ -223,6 +207,31 @@
                 </configuration>
             </plugin>
 
+            <!--Code coverage report for Sonarqube with Jacoco -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.6</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <excludes>
+                        <exclude>**/*EmployeeInfoHandler.*</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
 
             <plugin>
                 <groupId>org.springframework.boot</groupId>
