--- a/src/main/azure/local.settings.json
+++ b/src/main/azure/local.settings.json
@@ -3,6 +3,7 @@
   "Values": {
     "AzureWebJobsStorage": "",
     "FUNCTIONS_WORKER_RUNTIME": "java",
+    "MAIN_CLASS":"com.jpworks.datajdbc.employee.EmployeeApplication",
     "AzureWebJobsDashboard": ""
   }
 }
